{{$NEXT}}

0.000150  2023-03-21 08:25:21-07:00 America/Los_Angeles

    - Do not index Devel::MAT::Dumper

0.000149  2023-03-21 06:44:50-07:00 America/Los_Angeles

    - Fix warning when Devel::MAT::Dumper is installed and -w is used

0.000148  2023-03-05 14:59:45-08:00 America/Los_Angeles

    - Fixes for refcount stuff

0.000147  2023-03-04 11:42:59-08:00 America/Los_Angeles

    - Add refcount tools, and include in ::V0

0.000146  2023-03-04 11:08:10-08:00 America/Los_Angeles

    - Add T2_AUTO_DUMP and T2_AUTO_DEPARSE env vars

0.000145  2022-03-04 15:10:09-08:00 America/Los_Angeles

    - Fix subtest times to be hi-res

0.000144  2021-12-03 13:17:19-08:00 America/Los_Angeles

    - Add void context warning for dies and lives

0.000143  2021-12-01 11:20:03-08:00 America/Los_Angeles

    - Add stringification option for custom compare checks

0.000142  2021-11-15 14:06:34-08:00 America/Los_Angeles

    - Fix deprecation diagnostics
    - Fix older perls by removing //=

0.000141  2021-07-26 12:15:34-07:00 America/Los_Angeles

    - Add start and stop stamps to async subtest

0.000140  2021-05-12 08:08:17-07:00 America/Los_Angeles

    - Add L() "length" quick check for comparisons

0.000139  2020-12-15 19:48:07-08:00 America/Los_Angeles

    - Merge PR to add ISA checks
    - Fix Manual module that was missing package/return true

0.000138  2020-10-21 19:46:07-07:00 America/Los_Angeles

    - Merge doc fix from PR
    - Merge strict fix for test

0.000137  2020-10-21 18:22:07-07:00 America/Los_Angeles

    - Test new syntax `use Test2::Plugin::SRand seed => $seed;`
    - Update GitHub workflow with deprecated add-path

0.000136  2020-10-05 22:05:24-07:00 America/Los_Angeles

    - Fix typo Test2::Builder -> Test::Builder
    - Improve import logic for SRand
    - Other misc typo fixes

0.000135  2020-08-16 21:44:24-07:00 America/Los_Angeles

    - No changes since last trial

0.000134  2020-08-15 13:11:30-07:00 America/Los_Angeles (TRIAL RELEASE)
