@@ -30,20 +30,17 @@ perl          = 5.008001
 Test2::API    = 1.302176
 Importer      = 0.024
 Term::Table   = 0.013
-Sub::Info     = 0.002
 B             = 0
 Carp          = 0
 Exporter      = 0
 Scalar::Util  = 0
-Scope::Guard  = 0
 Time::HiRes   = 0
 overload      = 0
 utf8          = 0
 Data::Dumper  = 0
-Module::Pluggable   = 2.7
 
 [Prereqs / RuntimeSuggests]
-Sub::Name          = 0.11
+Module::Pluggable  = 2.7
 Term::ReadKey      = 0
 Term::Size::Any    = 0
 Unicode::GCString  = 0
