@@ -13,10 +13,10 @@ use Test2::Util qw/get_tid CAN_THREAD CAN_FORK/;
 use Scalar::Util qw/blessed weaken/;
 use List::Util qw/first/;
 
-use Scope::Guard();
 use Test2::API();
 use Test2::API::Context();
 use Test2::Util::Trace();
+use Test2::Util::Guard();
 use Time::HiRes();
 
 use Test2::AsyncSubtest::Hub();
@@ -480,7 +480,7 @@ sub _guard {
 
     my ($pid, $tid) = ($$, get_tid);
 
-    return Scope::Guard->new(sub {
+    return Test2::Util::Guard->new(sub {
         return unless $$ == $pid && get_tid == $tid;
 
         my $error = "Scope Leak";
@@ -733,8 +733,8 @@ occurred.
 
 This is a slightly higher level interface to fork. Running it will fork your
 code in-place just like C<fork()>. It will return a pid in the parent, and an
-L<Scope::Guard> instance in the child. An exception will be thrown if fork
-fails.
+L<Test2::Util::Guard> instance in the child. An exception will be thrown if
+fork fails.
 
 It is recommended that you use C<< $ast->run_fork(sub { ... }) >> instead.
 
