@@ -7,7 +7,7 @@ our $VERSION = '0.000151';
 use Carp qw/confess croak/;
 use Scalar::Util qw/blessed/;
 
-use Sub::Info qw/sub_info/;
+use Test2::Util::Sub qw/sub_info/;
 use Test2::Compare::Delta();
 
 sub MAX_CYCLES() { 75 }
