@@ -288,12 +288,6 @@ This means the package name is '::Error', but the key is 'errors'.
     sub facet_key { 'errors' }
     sub is_list { 1 }
 
-B<Note> Do not worry too much about getting the key/pluralization wrong. Most
-tools will use L<Module::Pluggable> to load all facet types and build a hash
-linking keys to packages and so on, working backwards. This means, in general,
-that even if you get it wrong any tool that NEEDS the package for the facet
-will find it.
-
 B<Note2:> In practice most tools completely ignore the facet packages, and work
 with the facet data directly in its raw structure. This is by design and
 recommended. The facet data is intended to be serialized frequently and passed
