@@ -5,8 +5,13 @@ use warnings;
 our $VERSION = '0.000151';
 
 use Carp qw/croak/;
-use Module::Pluggable search_path => ['Test2::EventFacet'], require => 1;
 use Test2::Util::Ref qw/rtype/;
+
+BEGIN {
+    if (eval { require Module::Pluggable; 1 }) {
+        Module::Pluggable->import(search_path => ['Test2::EventFacet'], require => 1);
+    }
+}
 
 use Importer Importer => 'import';
 
