@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+    - The following are all in hopes of getting Test2:Suite into core.
+    - Make Module::Pluggable optional
+    - Inline Scope::Guard
+    - Inline Sub::Info
+    - Do not recommend Sub::Name
+
 0.000150  2023-03-21 08:25:21-07:00 America/Los_Angeles
 
     - Do not index Devel::MAT::Dumper
